--- a/app/assets/stylesheets/css/3-layouts/tip_buttons.sass
+++ b/app/assets/stylesheets/css/3-layouts/tip_buttons.sass
@@ -1,2 +1,4 @@
 .button-group
   padding-top: 2%
+  margin-top: 2%
+
